--- a/Java/虚拟机/笔记.md
+++ b/Java/虚拟机/笔记.md
@@ -2,13 +2,13 @@
 
 pc寄存器, 每个java虚拟机线程都有自己的pc寄存器
 
-java虚拟机栈 每个java虚拟机线程都有自己私有的java虚拟机栈, 这个栈与线程同时创建爱你, 用于存储栈帧
+java虚拟机栈 每个java虚拟机线程都有自己私有的java虚拟机栈, 这个栈与线程同时创建你, 用于存储栈帧
 
 java堆 各个线程运行时共享的内存区
 1. 自动内存管理系统 也就是 垃圾收集器 所管理的各种对象, 这些对象收到管理 无法也无需显示销毁
 
 方法区
-各个县城共享的运行时内存区域
+各个 线程 共享的运行时内存区域
 在虚拟机启动的时候创建
 编译代码存储区 操作系统进程的正文段
 运行时常量吃 子弹和方法数据 构造函数和普通方法的字节码内容
@@ -27,3 +27,162 @@ java堆 各个线程运行时共享的内存区
 	2. 一个局部变量类型可以是 boolean byte char short int float reference returnAddress 两个局部变量可以保存为一个类型为long和double的数据
 	3. 局部变量是使用索引来定位的, 一个long和double会占据连续的两个索引
 	4. 函数的参数传递是通过局部变量表的
+
+
+# class文件格式 #
+通过类似 结构体 的方式定义了一个类的元信息
+可以想象到的比如, 用 标记位 来表示 一个类/字段/方法 的访问权限
+
+## 描述符 ##
+jvm用一个字符串来描述 方法 和 字段
+
+B byte
+C char
+D double
+F float
+I int
+J long
+S short
+Z boolean
+V Void
+L 对象, 比如 Ljava.lang.Object Ljava.lang.String
+对于数组, 每多一个维度就在前面加一个[
+
+对于一个一维数组, 比如 byte[] "[B" 就是它的类名, 所以你打印一个数组的时候经常会看到 类似 [B@1376c05c 的输出
+
+> 注, 类的描述符比较长, 为了做区分, 通常需要加一个分号在末尾表示间隔, 否则方法描述符会有问题
+
+
+### 字段描述符 ###
+跟描述符里提到的映射关系一致
+
+
+
+### 方法描述符 ###
+方法描述符=(参数类型描述符累加)返回值类型描述符
+
+String toString() = ()LJava.lang.String
+int indexOf(String, index) = (Ljava.lang.String;I)I
+
+> 注意上述的参数的描述符是 Ljava.lang.String;I 而不是 Ljava.lang.StringI 因为后者根本无法区分出 String 和 int, 说不定有个类就叫做 StringI 呢...
+
+### 6.3.7 属性表集合 ###
+很多表有一个 attribute_info 的结构, 其实就类似于一个 Map<String, byte[]> 每个byte[] 具体有什么含义取决于String的值是什么. 有了它就具备了很多扩展性  
+
+它目前用于内存储  
+
+- 方法体编译后的字节码  
+- final的常量值
+- 方法抛出的异常信息
+- 源代码行号与字节码对应表
+- 泛型签名
+
+#### Code属性 ####
+保存了:
+
+- 方法体的代码经过编译后的字节码
+- 操作数栈最大深度
+- 异常表信息
+- 局部变量最大slot数, 不超过32位的类型占一个slot, double long占用2个slot
+	- this, 局部变量, 异常参数 都是存放在slot里的
+
+> 有一字段叫做 code_length 长度是4字节, 用于存放指令码的长度, 但虚拟机规范明确规定方法长度不允许超过65535条字节码, 因此! 方法的长度肯定远小于65535
+
+
+## 6.4 字节码指令简介 ##
+java虚拟机用一个字节来表示特定意义的操作, 又称为操作码/opcode, 由于java虚拟机采用操作数栈而不是寄存器的架构, 因此大多数指令都不包含操作数, 只有一个操作码
+
+优点:
+
+- 1
+- 2
+- 3
+
+
+缺点:
+
+- 相比寄存器架构, 通常需要更多指令才能完成相同的事情, 造成性能损失
+- 2
+- 3
+
+### 6.4.1 字节码与数据类型 ###
+大部分的基本数据类型的各种操作都有直接的字节码, 比如 iload fload
+注意观察前缀, i表示int, f表示float
+通常:
+
+- b = byte
+- c = char
+- s = short
+- i = int
+- f = float
+- l = long
+- d = double
+- a = reference
+- 这里并没有boolean
+
+由于字节码只能表示256种可能, 不是所有操作都直接支持所有数据类型的, 那样需要话费大量的指令, 于是有一些类型的一些操作, 就没有对应的指令, 但它们可以用别人的指令带代替, 比如 没有 bload 指令, 但是可以用 iload 来代替
+
+> 这里可以放一张矩阵图, 表示各种操作与各种数据类型是否有直接的支持
+
+### 6.4.2 加载和存储指令 ###
+Tload系列用于将一个局部变量(根据slot的索引来定位)加载到操作数栈顶
+
+Tstore系列用于将栈顶弹出到局部变量
+astore_2 将栈顶的引用存储到局部变量slot2中
+aload_0 将slot0的变量入栈 (通常slot0是this)
+
+
+
+将一个常量加载到操作数栈顶:
+bipush sipush ldc, ... 这里名字怎么有点随意啊!?
+
+Tadd 加法
+Tsub 减法
+Tmul 乘法
+Tdiv 除法
+Trem 取余数
+Tneg 取反
+Tshl Tshr Tushl Tushr 位移,只有i和l支持
+Tor
+iand land ixor lxor
+iinc
+
+只有idiv ldiv在除数为0的时候才会抛异常
+其它浮点数0做除数也不抛异常的, 只是结果为NaN
+
+i2b l2i 类型转换
+
+arraylength 取数组长度
+instanceof checkast 检查类型
+
+NaN转成int或long时是0
+
+pop 弹出1个元素(丢弃)
+pop2 弹出2个元素(丢弃)
+dup 复制栈顶的元素, 重新加入栈
+dup2
+
+return 返回void
+
+swap 栈顶2个元素互换
+
+条件分支
+复合条件分支
+无条件分支
+
+
+
+
+
+## 常用速查 ##
+
+Tload系列
+iload 用于从局部变量表加载int类型数据到操作数栈顶
+
+aload_0
+invokespecial
+invokevirtual
+getfield
+putfield
+iadd
+return
